cmake_minimum_required(VERSION 3.12)
project(OOP_Lab5)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        OOP_Lab5
        main.cpp
        Human.cpp
        Human.h
        List.cpp
        List.h
        Headwaiter.cpp
        Headwaiter.h
        Waiter.cpp
        Waiter.h
        Chef.cpp
        Chef.h
        Administrator.cpp
        Administrator.h
        Restaurant.cpp
        Restaurant.h
        Client.cpp
        Client.h
        FoodSupplier.cpp
        FoodSupplier.h
        macros.h
)